--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "bootstrap": "^4.1.3",
+    "google-map-react": "^1.0.6",
     "i": "^0.3.6",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.2",
