--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-full-page": "^0.1.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "npm-run-all": "^4.1.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -31,6 +32,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.3"
+    
   }
 }
