--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-map-react": "^1.0.6",
     "i": "^0.3.6",
     "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
@@ -19,7 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
-    "npm-run-all": "^4.1.3"
+    "simplebar": "^3.0.0-beta.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -31,7 +32,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
