--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i": "^0.3.6",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
+    "rc-slider": "^8.6.3",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
